--- a/style.css
+++ b/style.css
@@ -29,11 +29,11 @@ body {
     grid-column: 1;
     grid-row: 1 / 3;
     background: white;
-    border-radius: 15px;
+    border-radius: 10px;
     padding: 20px 10px;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: left;
     box-shadow: 0 4px 12px rgba(0,0,0,0.05);
     z-index: 100;
 }
