--- a/style.css
+++ b/style.css
@@ -656,6 +656,8 @@ body {
         padding: 10px 15px;
         margin-bottom: 5px;
         grid-row: auto;
+        align-items: center;
+        justify-content: center;
     }
     
     .logo-vertical {
@@ -671,10 +673,13 @@ body {
         flex-direction: row;
         justify-content: center;
         width: 100%;
+        height: fit-content;
         align-items: center;
+        display: flex;
     }
     
     .steps-container {
+        display: flex;
         flex-direction: row;
         margin-bottom: 0;
         gap: 8px;
