--- a/style.css
+++ b/style.css
@@ -803,6 +803,15 @@ compact-steps {
         padding: 10px;
     }
     
+      .sidebar-logo {
+        display: flex;
+        width: 90%;
+        height: 80px;
+        flex-direction: row;
+        padding: 5px 5px;
+        margin-bottom: 5px;
+        grid-row: auto;
+        align-items: center;
       .progress-track {
         flex-direction: row;
         justify-content:center;
