--- a/style.css
+++ b/style.css
@@ -801,10 +801,11 @@ compact-steps {
     .app-container {
         display: flex;
         flex-direction: column;
-        height: 100vh;
-        overflow: auto;
-        padding: 5px;
+        height: 100%;
+        overflow: flex;
+        padding: 1px;
         gap: 5px;
+        width: 100%;
     }
     
     .sidebar-logo {
@@ -812,8 +813,8 @@ compact-steps {
         width: 100%;
         height: 80px;
         flex-direction: row;
-        padding: 5px 5px;
-        margin-bottom: 5px;
+        padding: 2px 2px;
+        margin-bottom: 2px;
         grid-row: auto;
         align-items: center;
         
@@ -823,6 +824,7 @@ compact-steps {
         flex-direction: row;
         justify-content:center;
         width: 90%;
+        display: flex;
     }
     
     .steps-container {
@@ -832,8 +834,8 @@ compact-steps {
     }
     
     .menu-step {
-        width: 55px;
-        height: 55px;
+        width: 45px;
+        height: 45px;
     }
     
     .menu-step i {
@@ -853,9 +855,10 @@ compact-steps {
     .maze-area {
         flex: 1;
         margin-bottom: 5px;
-        padding: 15px;
+        padding: 5px;
         grid-column: auto;
         grid-row: auto;
+       display: flex;
     }
     
     .home-content h1 {
@@ -872,17 +875,17 @@ compact-steps {
     }
     
     .house-grid {
-        gap: 10px;
-        padding: 10px;
+        gap: 2px;
+        padding: 2px;
     }
     
     .option-card {
-        min-height: 100px;
-        padding: 15px;
+        min-height: 8px;
+        padding: 5px;
     }
     
     .option-card i {
-        font-size: 1.3rem;
+        font-size: 1rem;
     }
     
     .option-card .option-title {
