--- a/style.css
+++ b/style.css
@@ -38,20 +38,6 @@ body {
     z-index: 100;
   }
 
-.logo-vertical {
-    writing-mode: vertical-rl;
-    text-orientation: mixed;
-    font-size: 2.5rem;
-    font-weight: 800;
-    letter-spacing: 8px;
-    color: #8B4513;
-    margin-bottom: 30px;
-    height: 200px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
 .logo-vertical span {
     display: block;
     margin: 5px 0;
@@ -75,8 +61,8 @@ body {
 }
 
 .menu-step {
-    width: 60px;
-    height: 60px;
+    width: 65px;
+    height: 65px;
     border-radius: 50%;
     background: #f0e6d6;
     display: flex;
@@ -117,7 +103,7 @@ body {
 }
 
 .menu-step.final-step {
-    background: #5A5A5A;
+    background: #89c4a1;
     color: white;
 }
 
@@ -683,6 +669,10 @@ compact-steps {
         grid-row: 3;
         margin-top: 10px;
     }
+     .menu-step {
+        width: 75px;
+        height: 75px;
+    }
 }
 
 @media (max-width: 768px) {
@@ -800,7 +790,7 @@ compact-steps {
         right: 10px;
     }
 }
-    @media (max-width: 580px) {
+    @media (max-width: 480px) {
     .app-container {
         display: flex;
         flex-direction: column;
