--- a/style.css
+++ b/style.css
@@ -911,7 +911,7 @@ compact-steps {
         right: 10px;
     }
 }
-    @media (max-width: 680px) {
+    @media (max-width: 480px) {
     .app-container {
         display: flex;
         flex-direction: column;
@@ -973,8 +973,21 @@ compact-steps {
         grid-column: auto;
         grid-row: auto;
        display: flex;
-    }
-    
+           }
+    .house-grid {
+        display: grid;
+        grid-template-areas: 
+            "roof roof"
+            "left-top right-top"
+            "left-bottom right-bottom";
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+        gap: 20px;
+        width: 95%;
+        max-width: 500px;
+        height: 100%;
+        max-height: 500px;
+}
     .home-content h1 {
         font-size: 1.5rem;
         margin-bottom: 20px;
